# services/motif-service/infrastructure/__generated__/motif_service/motif_service.pb.go
@@ -32,8 +32,8 @@ type ImageRequest struct {
 	//	*ImageRequest_Path
 	//	*ImageRequest_Base64
 	Image isImageRequest_Image `protobuf_oneof:"image"`
-	// Whether to save a debug image and add it to the response.
-	Debug bool `protobuf:"varint,3,opt,name=debug,proto3" json:"debug,omitempty"`
+	// If set, the service will save the image used for bounding box detection in the specified directory.
+	DebugDirPath string `protobuf:"bytes,3,opt,name=debug_dir_path,json=debugDirPath,proto3" json:"debug_dir_path,omitempty"`
 }
 
 func (x *ImageRequest) Reset() {
@@ -89,11 +89,11 @@ func (x *ImageRequest) GetBase64() string {
 	return ""
 }
 
-func (x *ImageRequest) GetDebug() bool {
+func (x *ImageRequest) GetDebugDirPath() string {
 	if x != nil {
-		return x.Debug
+		return x.DebugDirPath
 	}
-	return false
+	return ""
 }
 
 type isImageRequest_Image interface {
@@ -197,12 +197,13 @@ var file_motif_service_motif_service_proto_rawDesc = []byte{
 	0x6d, 0x6f, 0x74, 0x69, 0x66, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x70, 0x72,
 	0x6f, 0x74, 0x6f, 0x12, 0x05, 0x6d, 0x6f, 0x74, 0x69, 0x66, 0x1a, 0x1c, 0x67, 0x6f, 0x6f, 0x67,
 	0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f,
-	0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x5d, 0x0a, 0x0c, 0x49, 0x6d, 0x61, 0x67,
+	0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x6d, 0x0a, 0x0c, 0x49, 0x6d, 0x61, 0x67,
 	0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x14, 0x0a, 0x04, 0x70, 0x61, 0x74, 0x68,
 	0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x48, 0x00, 0x52, 0x04, 0x70, 0x61, 0x74, 0x68, 0x12, 0x18,
 	0x0a, 0x06, 0x62, 0x61, 0x73, 0x65, 0x36, 0x34, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x48, 0x00,
-	0x52, 0x06, 0x62, 0x61, 0x73, 0x65, 0x36, 0x34, 0x12, 0x14, 0x0a, 0x05, 0x64, 0x65, 0x62, 0x75,
-	0x67, 0x18, 0x03, 0x20, 0x01, 0x28, 0x08, 0x52, 0x05, 0x64, 0x65, 0x62, 0x75, 0x67, 0x42, 0x07,
+	0x52, 0x06, 0x62, 0x61, 0x73, 0x65, 0x36, 0x34, 0x12, 0x24, 0x0a, 0x0e, 0x64, 0x65, 0x62, 0x75,
+	0x67, 0x5f, 0x64, 0x69, 0x72, 0x5f, 0x70, 0x61, 0x74, 0x68, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09,
+	0x52, 0x0c, 0x64, 0x65, 0x62, 0x75, 0x67, 0x44, 0x69, 0x72, 0x50, 0x61, 0x74, 0x68, 0x42, 0x07,
 	0x0a, 0x05, 0x69, 0x6d, 0x61, 0x67, 0x65, 0x22, 0x5f, 0x0a, 0x13, 0x42, 0x6f, 0x75, 0x6e, 0x64,
 	0x69, 0x6e, 0x67, 0x42, 0x6f, 0x78, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x0c,
 	0x0a, 0x01, 0x78, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x52, 0x01, 0x78, 0x12, 0x0c, 0x0a, 0x01,
